@@ -35,6 +35,7 @@ Application Changes:
 - Built-in modifications to built-in weapon mounts no longer take up slots inside the weapon mount or contribute to its overall costs.
 - When modifying a weapon mount, changing its Visibility no longer causes its old Visibility value to be kept and have its availability and slot modifiers applied. Fixes #4648.
 - Adding a quality that is suppressed by something that is already on the character now properly disables the quality's effects.
+- Mastery Qualities bought with spell points now properly contribute to the positive quality karma limit. Fixes #4654.
 
 Data Changes:
 - Fixed missing multiplier for Haunted lifestyle quality.
